Fixed password page. Added name modeling on account page.

--- a/src/main/webapp/scripts/app/account/password/password.html
+++ b/src/main/webapp/scripts/app/account/password/password.html
@@ -21,6 +21,9 @@
                         <label class="control-label" translate="account.password.confirm"></label>
                         <div class="controls">
                             <input type="password" required="required" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="password.newPasswordConfirmation">
+                            <div>
+                                <label translate="account.password.warning" style="color: red"></label>
+                            </div>
                         </div>
                     </div>
                     <div class="return"></div>
