--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -172,6 +172,7 @@
 
     <script src="scripts/app/about/about.js"></script>
     <script src="scripts/app/account/profile/profile.js"></script>
+    <script src="scripts/app/account/account.controller.js"></script>
     <script src="scripts/app/account/tags/tags.js"></script>
     <script src="scripts/app/account/tags/tags.controller.js"></script>
     <script src="scripts/app/account/files/files.js"></script>
