skip jhipster home page

--- a/src/main/webapp/scripts/app/main/main.html
+++ b/src/main/webapp/scripts/app/main/main.html
@@ -1,3 +1,6 @@
+
+<!--<META http-equiv="refresh" content="0;URL=http://localhost:3000/#/home/timeline">
+-->
 <div ng-cloak>
     <div class="row">
         <div class="col-md-4">
