Added View Conversation functionality.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -210,6 +210,8 @@
     <script src="scripts/app/home/timeline/favorites/favorites.js"></script>
     <script src="scripts/app/home/timeline/tag/tag.js"></script>
     <script src="scripts/app/home/timeline/tag/tagHeader.controller.js"></script>
+    <script src="scripts/app/home/status/status.controller.js"></script>
+    <script src="scripts/app/home/status/status.js"></script>
 
 </body>
 </html>
