group page design

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,6 +14,8 @@
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.css" />
         <!-- endbower -->
+        <!--link rel="stylesheet" href= "assets/styles/bootstrap.css" />
+
         <!-- endbuild -->
         <!-- build:css assets/styles/main.css -->
         <link rel="stylesheet" href="assets/styles/main.css">
@@ -178,6 +180,7 @@
     <script src="scripts/app/account/users/users.js"></script>
     <script src="scripts/app/account/users/users.controller.js"></script>
     <script src="scripts/app/account/groups/groups.js"></script>
+        <script src="scripts/app/account/groups/groups.controller.js"></script>
     <script src="scripts/app/account/topPosters/topPosters.js"></script>
     <script src="scripts/components/auth/services/user.service.js"></script>
     <script src="scripts/app/account/preferences/preferences.controller.js"></script>
