--- a/src/main/webapp/scripts/app/account/groups/groups.html
+++ b/src/main/webapp/scripts/app/account/groups/groups.html
@@ -1,8 +1,57 @@
+
+
 <div class="col-lg-8">
     <div class="alert alert-status">
         <div class = well>
-            <form class="form-horizontal row-fluid">
+            <form class="form-horizontal">
                 <h2 translate="account.groups.title"></h2>
+
+                <div>
+                    <button class="show btn btn-xlarge btn-block btn-primary" type="button" translate="account.groups.createNewGroup" ng-click="newGroup()"></button>
+
+                    <fieldset class="hide" style="display: block;" ng-show="current.createGroup">
+                        <legend translate="account.groups.create"></legend>
+                    </fieldset>
+                    <div class="control-group">
+                        <label class="control-label" for="name" translate="account.groups.name"></label>
+                        <div class="controls">
+                            <input name="name" type="text" required="required" size="30" maxlength="50" class="input-xlarge col-lg-12" value="" ng-model="groups.name">
+                        </div>
+                    </div>
+
+                    <div class="control-group">
+                        <label class="control-label" for="description" translate="account.groups.description"></label>
+                        <div class="controls">
+                            <textarea name="description" class="input-xlarge col-lg-12" ng-model="groups.description"></textarea>
+                        </div>
+                    </div>
+
+
+                    <div class="control-group">
+                        <label class="control-label" for="publicGroup" translate="account.groups.access"></label>
+
+                        <div class="controls">
+                            <label class="radio" style="left: 50px">
+                                <input type="radio" name="publicGroup" value="true" ng-checked="true" required="" ng-model="groups.publicGroup"> {{ 'account.groups.public' | translate }}
+                            </label>
+                            <label class="radio" style="left: 50px">
+                                <input type="radio" name="publicGroup" value="false" required="" ng-model="groups.publicGroup"> {{ 'account.groups.private' | translate }}
+                            </label>
+                        </div>
+                    </div>
+
+                    <div class="alertColor">
+                        <span class="glyphicon glyphicon-warning-sign"></span>
+                        <span translate="account.groups.publicWarning"></span>
+                    </div>
+                    <br>
+                    <div class="return"></div>
+                    <br>
+                    <div class="form-actions">
+                        <button type="submit" class="btn btn-primary col-lg-7 little-marge-right" translate="account.groups.create" ng-click="createNewGroup()"></button>
+                        <button type="reset" class="btn btn-default col-lg-4" translate="form.cancel" ng-click="cancelGroupCreate()"></button>
+                    </div>
+                </div>
 
                 <div ui-view="create"></div>
 
@@ -25,6 +74,54 @@
 
                 <div ui-view="list"></div>
             </form>
+            <div>
+                <form class="row-fluid littleMargeBot">
+                    <input ng-show="$state.is('account.groups.main.top.search')" ng-model="current.searchString" ng-trim="false" ng-change="search()" id="block_filter" type="text" class="search-query col-span-12" name="result_filter" autocomplete="off" placeholder="{{ 'account.groups.search' | translate }}">
+                </form>
+                <table class="table noCollapse">
+                    <tbody>
+                    <tr>
+                        <th style="border-top: 0" translate="account.groups.name"></th>
+                        <th style="border-top: 0" translate="account.groups.access"></th>
+                        <th style="border-top: 0" translate="account.groups.members"></th>
+                        <th style="border-top: 0"></th>
+                    </tr>
+                    </tbody>
+                    <tbody class="items">
+                    <div>
+                        <tr ng-repeat="group in userGroups">
+                            <td>
+                                <a ui-sref="home.home.group.statuses({ groupId: group.groupId })">{{ group.name }}</a>
+                            </td>
+                            <td>
+                                <span ng-show="group.publicGroup && !group.archivedGroup" class="label labelSizeNormal label-warning" translate="account.groups.public"></span>
+                                <span ng-show="!group.publicGroup && !group.archivedGroup" class="label labelSizeNormal label-info" translate="account.groups.private"></span>
+                                <span ng-show="group.archivedGroup" class="label labelSizeNormal" translate="account.groups.archived"></span>
+                            </td>
+                            <td>
+                                {{ group.counter }}
+                            </td>
+                            <td>
+                        <span ng-if="group.administrator">
+                            <button type="button" ui-sref="account.groups.manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone">
+                                <span class="glyphicon glyphicon-th-large"></span>
+                                <span translate="account.groups.manage"></span>
+                            </button>
+                        </span>
+
+                                <button type="button" ng-if="!group.administrator" ng-click="joinLeaveGroup(group)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right" ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
+                            <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
+                                <span ng-if="!group.member" class="hidden-phone" translate="account.groups.join"></span>
+                                <span ng-if="group.member && !hover" class="hidden-phone" translate="account.groups.joined"></span>
+                                <span ng-if="group.member && hover" class="hidden-phone" translate="account.groups.leave"></span>
+                            </span>
+                                </button>
+                            </td>
+                        </tr>
+                    </div>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 </div>
