remove log statement and some old, unused code

--- a/src/main/webapp/scripts/app/account/account.html
+++ b/src/main/webapp/scripts/app/account/account.html
@@ -12,9 +12,7 @@
 
                             <div id="avatar">
                                 <div class="row text-center nomargin avatar-float-center-container">
-                                    <div class="col-lg-12"><img src="/assets/images/default_image_profile.png"></div>
-
-                                    <div>
+                                    <div class="col-lg-12">
                                         <img class="nomargin avatar img-rounded" ng-src="{{ profile.avatarURL }}">
                                     </div>
 
