Added state configurations for group page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -181,6 +181,12 @@
     <script src="scripts/app/account/users/users.controller.js"></script>
     <script src="scripts/app/account/groups/groups.js"></script>
         <script src="scripts/app/account/groups/groups.controller.js"></script>
+        <script src="scripts/app/account/groups/create/groupcreate.controller.js"></script>
+        <script src="scripts/app/account/groups/create/groupcreate.js"></script>
+        <script src="scripts/app/account/groups/list/grouplist.controller.js"></script>
+        <script src="scripts/app/account/groups/list/grouplist.js"></script>
+        <script src="scripts/app/account/groups/manage/groupmanage.controller.js"></script>
+        <script src="scripts/app/account/groups/manage/groupmanage.js"></script>
     <script src="scripts/app/account/topPosters/topPosters.js"></script>
     <script src="scripts/components/auth/services/user.service.js"></script>
     <script src="scripts/app/account/preferences/preferences.controller.js"></script>
