--- a/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
+++ b/src/main/webapp/scripts/app/home/timeline/sidebar/homeSidebar.html
@@ -22,10 +22,10 @@
         <div class="panel panel-default">
             <div tour-step
                  order="3"
-                 title="<b>{{ 'global.account.groups.title' | translate }}</b>"
+                 title="{{ 'home.sidebar.myGroups' | translate }}"
                  content="{{ 'global.account.groups.line1' | translate }}
-                         <p>{{ 'tatami.welcome.groups.line2' | translate }}</p>
-                         <p>{{ 'tatami.welcome.groups.line3' | translate }}</p>
+                         <p>{{ 'welcome.groups.line2' | translate }}</p>
+                         <p>{{ 'welcome.groups.line3' | translate }}</p>
                          <br>"
                  placement="right"
                  skip="false"
@@ -53,7 +53,7 @@
         <div class="panel panel-default">
             <div tour-step
                  order="4"
-                 title="<b>{{ 'global.account.trends.title' | translate }}</b>"
+                 title="{{ 'home.sidebar.trends' | translate }}"
                  content="{{ 'global.account.trends.line1' | translate }}"
                  placement="right"
                  skip="false"
@@ -78,10 +78,10 @@
         <div class="panel panel-default">
             <div tour-step
                  order="5"
-                 title="<b>{{ 'tatami.welcome.whoToFollow.title' | translate }}</b>"
-                 content="{{ 'tatami.welcome.whoToFollow.line1' | translate }}
-                         <p>{{ 'tatami.welcome.whoToFollow.line2' | translate }}</p>
-                         <p>{{ 'tatami.welcome.whoToFollow.line3' | translate }}</p>
+                 title="{{ 'home.sidebar.whoToFollow' | translate }}"
+                 content="{{ 'welcome.whoToFollow.line1' | translate }}
+                         <p>{{ 'welcome.whoToFollow.line2' | translate }}</p>
+                         <p>{{ 'welcome.whoToFollow.line3' | translate }}</p>
                          <br>"
                  placement="right"
                  skip="false"
