Update more tab to allow selection of the company timeline and create the company timeline view

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -35,10 +35,13 @@
         <script src="app/components/home/timeline/timeline.controller.js"></script>
         <script src="app/components/home/mentions/mentions.js"></script>
         <script src="app/components/home/mentions/mentions.controller.js"></script>
-        <script src="app/components/home/more/more.js"></script>
-        <script src="app/components/home/more/more.controller.js"></script>
         <script src="app/components/home/favorites/favorites.js"></script>
         <script src="app/components/home/favorites/favorites.controller.js"></script>
+
+        <script src="app/components/home/more/more.js"></script>
+        <script src="app/components/home/more/more.controller.js"></script>
+        <script src="app/components/home/more/company/company.timeline.js"></script>
+        <script src="app/components/home/more/company/company.timeline.controller.js"></script>
 
         <script src="app/components/follow/follow.js"></script>
         <script src="app/components/follow/suggested/suggested.js"></script>
