Added create group functionality. Added viewing groups you belong to functionality. Removed console log statements. Added create group as directive with collapsability instead of individual state. Replaced 'username' with 'login' in UserGroupDTO.

--- a/src/main/webapp/scripts/app/account/groups/groups.html
+++ b/src/main/webapp/scripts/app/account/groups/groups.html
@@ -5,62 +5,10 @@
         <div class = well>
             <form class="form-horizontal">
                 <h2 translate="account.groups.title"></h2>
-
-                <div>
-                    <button class="show btn btn-xlarge btn-block btn-primary" type="button" translate="account.groups.createNewGroup" ng-click="newGroup()"></button>
-
-                    <fieldset class="hide" style="display: block;" ng-show="current.createGroup">
-                        <legend translate="account.groups.create"></legend>
-                    </fieldset>
-                    <div class="control-group">
-                        <label class="control-label" for="name" translate="account.groups.name"></label>
-                        <div class="controls">
-                            <input name="name" type="text" required="required" size="30" maxlength="50" class="input-xlarge col-lg-12" value="" ng-model="groups.name">
-                        </div>
-                    </div>
-
-                    <div class="control-group">
-                        <label class="control-label" for="description" translate="account.groups.description"></label>
-                        <div class="controls">
-                            <textarea name="description" class="input-xlarge col-lg-12" ng-model="groups.description"></textarea>
-                        </div>
-                    </div>
-
-
-                    <div class="control-group">
-                        <label class="control-label" for="publicGroup" translate="account.groups.access"></label>
-
-                        <div class="controls">
-                            <label class="radio" style="left: 50px">
-                                <input type="radio" name="publicGroup" value="true" ng-checked="true" required="" ng-model="groups.publicGroup"> {{ 'account.groups.public' | translate }}
-                            </label>
-                            <label class="radio" style="left: 50px">
-                                <input type="radio" name="publicGroup" value="false" required="" ng-model="groups.publicGroup"> {{ 'account.groups.private' | translate }}
-                            </label>
-                        </div>
-                    </div>
-
-                    <div class="alertColor">
-                        <span class="glyphicon glyphicon-warning-sign"></span>
-                        <span translate="account.groups.publicWarning"></span>
-                    </div>
-                    <br>
-                    <div class="return"></div>
-                    <br>
-                    <div class="form-actions">
-                        <button type="submit" class="btn btn-primary col-lg-7 little-marge-right" translate="account.groups.create" ng-click="createNewGroup()"></button>
-                        <button type="reset" class="btn btn-default col-lg-4" translate="form.cancel" ng-click="cancelGroupCreate()"></button>
-                    </div>
-                </div>
-
-                <div ui-view="create"></div>
+                <tatami-group-create></tatami-group-create>
 
                 <div class="tabMenu">
                     <ul class="nav nav-tabs">
-                        <!--<li ng-class="{ 'active': $state.current.name === 'manage' }">
-                            <a ui-sref="manage" translate="account.groups.myGroups">
-                            </a>
-                        </li>-->
                         <li ng-class="{ 'active': $state.current.name === 'mine' }">
                             <a ui-sref="mine" translate="account.groups.myGroups">
                             </a>
