--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -181,8 +181,8 @@
     <script src="scripts/app/account/users/users.controller.js"></script>
     <script src="scripts/app/account/groups/groups.js"></script>
         <script src="scripts/app/account/groups/groups.controller.js"></script>
-        <script src="scripts/app/account/groups/create/groupcreate.controller.js"></script>
-        <script src="scripts/app/account/groups/create/groupcreate.js"></script>
+        <script src="scripts/app/account/groups/create/create.controller.js"></script>
+        <script src="scripts/app/account/groups/create/create.directive.js"></script>
         <script src="scripts/app/account/groups/list/grouplist.controller.js"></script>
         <script src="scripts/app/account/groups/list/grouplist.js"></script>
         <script src="scripts/app/account/groups/manage/groupmanage.controller.js"></script>
