--- a/src/main/webapp/scripts/app/account/groups/create/create.html
+++ b/src/main/webapp/scripts/app/account/groups/create/create.html
@@ -42,7 +42,7 @@
     <br>
     <div class="form-actions">
         <button type="submit" class="btn btn-primary col-lg-7 little-marge-right" translate="account.groups.create" ng-click="createNewGroup()"></button>
-        <button type="reset" class="btn btn-default col-lg-4" translate="form.cancel" ng-click="cancelGroupCreate()"></button>
+        <button type="reset" class="btn btn-default col-lg-4" translate="account.groups.cancel" ng-click="cancelGroupCreate()"></button>
     </div>
     </div>
 </div>
