--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+        <meta http-equiv="Content-Security-Policy" content="*">
         <title></title>
 
         <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
