--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -194,6 +194,7 @@
         <script src="scripts/app/account/groups/list/list.js"></script>
         <script src="scripts/app/account/groups/manage/groupmanage.controller.js"></script>
         <script src="scripts/app/account/groups/manage/groupmanage.js"></script>
+        <script src="scripts/app/account/groups/manage/manage.directive.js"></script>
     <script src="scripts/app/account/topPosters/topPosters.js"></script>
     <script src="scripts/components/auth/services/user.service.js"></script>
     <script src="scripts/app/account/preferences/preferences.controller.js"></script>
