--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -183,8 +183,15 @@
         <script src="scripts/app/account/groups/groups.controller.js"></script>
         <script src="scripts/app/account/groups/create/create.controller.js"></script>
         <script src="scripts/app/account/groups/create/create.directive.js"></script>
-        <script src="scripts/app/account/groups/list/grouplist.controller.js"></script>
-        <script src="scripts/app/account/groups/list/grouplist.js"></script>
+        <script src="scripts/app/account/groups/list/list.controller.js"></script>
+        <script src="scripts/app/account/groups/list/list.directive.js"></script>
+        <script src="scripts/app/account/groups/list/mine/mine.js"></script>
+        <script src="scripts/app/account/groups/list/mine/mine.controller.js"></script>
+        <script src="scripts/app/account/groups/list/recommended/recommended.js"></script>
+        <script src="scripts/app/account/groups/list/recommended/recommended.controller.js"></script>
+        <script src="scripts/app/account/groups/list/search/search.js"></script>
+        <script src="scripts/app/account/groups/list/search/search.controller.js"></script>
+        <script src="scripts/app/account/groups/list/list.js"></script>
         <script src="scripts/app/account/groups/manage/groupmanage.controller.js"></script>
         <script src="scripts/app/account/groups/manage/groupmanage.js"></script>
     <script src="scripts/app/account/topPosters/topPosters.js"></script>
