--- a/src/main/webapp/scripts/app/account/groups/list/list.html
+++ b/src/main/webapp/scripts/app/account/groups/list/list.html
@@ -24,18 +24,11 @@
                 </td>
                 <td>
                         <span ng-if="group.administrator">
-                            <button type="button" ui-sref="manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone">
+                            <button type="button" ui-sref="account.groups.manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="account.groups.manage"></span>
                             </button>
                         </span>
-
-                    <button type="button" ng-if="!group.administrator" ng-click="joinLeaveGroup(group)" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right" ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
-                            <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
-                                <span ng-if="!group.member" class="hidden-phone" translate="account.groups.join"></span>
-                                <span ng-if="group.member && !hover" class="hidden-phone" translate="account.groups.joined"></span>
-                                <span ng-if="group.member && hover" class="hidden-phone" translate="account.groups.leave"></span>
-                            </span>
                     </button>
                 </td>
             </tr>
