--- a/src/main/webapp/scripts/app/account/groups/list/list.html
+++ b/src/main/webapp/scripts/app/account/groups/list/list.html
@@ -24,7 +24,7 @@
                 </td>
                 <td>
                         <span ng-if="group.administrator">
-                            <button type="button" ui-sref="account.groups.manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone">
+                            <button type="button" ui-sref="manage({ groupId: group.groupId })" class="pull-right btn btn-primary hidden-phone">
                                 <span class="glyphicon glyphicon-th-large"></span>
                                 <span translate="account.groups.manage"></span>
                             </button>
