--- a/src/main/webapp/scripts/app/account/groups/manage/manage.html
+++ b/src/main/webapp/scripts/app/account/groups/manage/manage.html
@@ -38,7 +38,7 @@
                     <div class="return"></div>
                     <br>
                     <div class="form-actions">
-                        <button ng-click="updateGroup()" type="submit" class="btn btn-primary col-lg-12" translate="form.save"></button>
+                        <button ng-click="updateGroup()" type="submit" class="btn btn-primary col-lg-12" translate="Save"></button>
                     </div>
                 </fieldset>
             </form>
