--- a/src/main/webapp/scripts/app/account/groups/list/search/search.html
+++ b/src/main/webapp/scripts/app/account/groups/list/search/search.html
@@ -1,7 +1,6 @@
-<div class="row">
+
 <form class="littleMargeBot">
-    <input ng-model="search.term" ng-trim="false" ng-change="search()" type="text" class="search-query col-sm-12" autocomplete="off" placeholder="{{ 'account.groups.search' | translate }}">
+        <input ng-model="search.term" ng-trim="false" ng-change="search()" type="text" class="search-query form-control" autocomplete="off" placeholder="{{ 'account.groups.search' | translate }}">
 </form>
-</div>
 <tatami-group-list user-groups="userGroups"></tatami-group-list>
 
