--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -82,6 +82,8 @@
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/ngToast/dist/ngToast.js"></script>
+        <script src="bower_components/openlayers/lib/OpenLayers.js"></script>
+
         <!-- endbower -->
         <!-- endbuild -->
 
